--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,5 @@ baseurl: 'https://martagut.github.io/Antiblog/'
 url: 'https://github.com/MartaGut.io'
 
 github: [metadata]
+
+repository: 'MartaGut/Antiblog'
