--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ settings:
     highlightPreTag: '<em class="custom_highlight">'
     highlightPostTag: '</em>'
 
-baseurl: 'https://martagut.github.io/Antiblog/'
+baseurl: 'Antiblog/'
 url: 'https://github.com/MartaGut.io'
 
 github: [metadata]
