--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ settings:
     highlightPreTag: '<em class="custom_highlight">'
     highlightPostTag: '</em>'
 
-baseurl: 'https://martagut.github.io/MartaGut/Antiblog/'
+baseurl: 'https://martagut.github.io/Antiblog/'
 url: 'https://github.com/MartaGut.io'
 
 github: [metadata]
 
-repository: 'MartaGut/Antiblog'
+repository: '/Antiblog'
