--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,8 @@ github: [metadata]
 repository: 'MartaGut/Antiblog'
 
 localhost: 'http://127.0.0.1:4000'
+
+tag_page_layout: tag_page
+tag_page_dir: tag
+
+tag_permalink_style: pretty
