--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,15 @@ tag_page_layout: tag_page
 tag_page_dir: tag
 
 tag_permalink_style: pretty
+
+collections:
+  category:
+    output: true
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: category
+    values:
+      layout: "category"
