--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ localhost: 'http://127.0.0.1:4000'
 tag_page_layout: tag_page
 tag_page_dir: tag
 
+tag_feed_layout: tag_feed
+tag_feed_dir: tag
+
 tag_permalink_style: pretty
 
 collections:
