--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ algolia:
     - searchAll.html
     - category/china.html
     - /searchAll/searchAll.html
+    - ammap/
 settings:
     highlightPreTag: '<em class="custom_highlight">'
     highlightPostTag: '</em>'
