--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ permalink: pretty
 
 highlighter: rouge
 
-title: Antiblog
+title: [Antiblog]
+
+logo: [/img/plane.png]
 
 title-img: /img/plane.png
