--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ branches:
     - gh-pages
 rvm:
  - 2.4
- exclude: 
-  -_posts\2018-01-04-russia-blog.md
+ matrix: 
+  exclude: 
+  - _posts\2018-01-04-russia-blog.md
